// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly on big screens 1`] = `
<span
  className="Typography-root Typography-heading2 Username-root"
>
  Marvin
</span>
`;

exports[`renders correctly on small screens 1`] = `
<span
  className="Typography-root Typography-heading3 Username-root"
>
  Marvin
</span>
`;
